# BuzzRacer

./: .README-needs-update.md  .gitignore  CMakeLists.txt  README.md  TODO.txt  notes.txt  package.xml  param.py  remoteros.sh  results.zip.REMOVED.git-id  rpi-startup.sh  startup.sh  uploadToArduino.sh
VICON/: VICON_driver_rc.m  ViconDataStreamSDK_MATLABTest.m
arduino/: LapTimer.cpp  LapTimer.h  drive.ino  install_pwm_lib.sh
arduino/arduino_publisher_test/: arduino_publisher_test.ino
arduino/drive/: drive.ino
arduino/drive_test/: drive_test.ino
arduino/motor_test/: motor_test.ino
arduino/old_drive/: drive.ino
arduino/servo_test/: servo_test.ino
calibrated/: dist.p  mtx.p
datadump/test1/: exp_state.p
datadump/test2/: exp_dw.p  exp_offset.p  exp_state.p
datadump/test3/: exp_dw.p  exp_state.p
docs/: HowToGenerateVelocityProfile.md
firmware/: CMakeLists.txt  arduino_main.cpp  arduino_main.ino  uploadToArduino.sh
firmware/CTCpwm/: CTCpwm.ino
firmware/arduino_main/: arduino_main.ino
firmware/mac_ppm/: mac_ppm.ino
firmware/rosless_ppm/: rosless_ppm.ino
gifs/oldgifs/: sim161.gif.REMOVED.git-id  sim163.gif.REMOVED.git-id  sim165.gif.REMOVED.git-id  sim167.gif.REMOVED.git-id  sim168.gif.REMOVED.git-id  sim171.gif.REMOVED.git-id  sim180.gif.REMOVED.git-id  sim181.gif.REMOVED.git-id  sim49.gif.REMOVED.git-id  sim51.gif.REMOVED.git-id  sim52.gif.REMOVED.git-id  sim53.gif.REMOVED.git-id  sim63.gif.REMOVED.git-id  sim64.gif.REMOVED.git-id  sim65.gif.REMOVED.git-id  sim67.gif.REMOVED.git-id  sim68.gif.REMOVED.git-id  sim69.gif.REMOVED.git-id
launch/: car.launch  demo.launch  joystick.launch  odroid_cam.launch  vicon.launch
log/: README.md
log/cvar_a_Cu_grid/: textlog.txt
log/cvar_a_Cu_grid_no_obstacle/: textlog.txt
log/ethsim/: debug_dict1.p  (+1 more)
msg/: CarControl.msg  CarSensors.msg  Vicon.msg
nodes/: Joystick.py  Track.py  analyze.py  car.py  filter.py  phase.py  rctf.py  skidpad.py  speed.py  ssThrottle.py  steeringCalibration.py  viconDrive.py
obsolete/: joystick_drive.py  odroid_startup.sh  recorder.py  snapshot.py
pics/: car1  slsqp1.tiff  slsqp2.tiff  slsqp3.tiff
src/: '  07_13_gridsearch.txt  20laps.txt  Car.py  CarController.py  CcmppiCarController.py  CollisionChecker.py  CrosstrackErrorTracker.py  DynamicSimulator.py  EmptyTrack.py  Extension.py  Gifsaver.py  KinematicSimulator.py  LapCounter.py  Laptimer.py  Logger.py  NatNetClient.py  Optitrack.py  PerformanceTracker.py  PidController.py  QfDemo.py  R001_100laps.txt  R001_no_step_cost_100laps.txt  RCPTrack.py  Simulator.py  StanleyCarController.py  StepCounter.py  Track.py  TrackFactory.py  TrajectoryPlotter.py  Visualization.py  Watchdog.py  additional_mppi.txt  advCarSim.py  batchRun.py  benchmark.py  calibration.py  car.py  cc_80_2096_20.txt  cc_80_4096_20_opponent.txt  (+119 more)
template/: trackbar_template.py
util/: 99-rc-vip.rules  filter.py  recorder.py  snapshot.py  speed.py  view.py
(+8357 files in other folders)
